Fix content fragment sidebar content breaking layout if string is too long

--- a/static-main/styles/_syna.scss
+++ b/static-main/styles/_syna.scss
@@ -44,3 +44,7 @@ article .content {
     max-width: 100%;
   }
 }
+
+.content-sidebar {
+  word-break: break-all;
+}
